[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "depanyzed"
description = "depth anything with ZED SDK"
readme = "README.md"
version = "0.0.2"
authors = [
    {name = "katsunori-waragai", email="waragai.katsunori@borgroid.co.jp"},
]

requires-python = ">= 3.8"

dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python==3.4.18.65",
    "scikit-image",
    "scikit-learn",
]

[project.urls]
Repositor = "https://github.com/katsunori-waragai/depth-anything-zed"

[tool.setuptools]
packages = ["depanyzed"]

[tool.black]
line-length = 120
