[metadata]
name = depanyzed
version = 0.0.1
description = depth anything with ZED SDK
author = katsunori-waragai
author_email = waragai.katsunori@borgroid.co.jp
url = https://github.com/katsunori-waragai/depth-anything-zed

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    opencv-python==3.4.18.65
    scikit-image
    scikit-learn